--- a/css/views.css
+++ b/css/views.css
@@ -277,5 +277,5 @@ td .vertical {
 	background-image:      -o-linear-gradient(right top, rgba(255,255,255,.6) 0%, rgba(255,255,255,0) 100%);
 	background-image:         linear-gradient(right top, rgba(255,255,255,.6) 0%, rgba(255,255,255,0) 100%);
    */
-   background-image:radial-gradient(white, rgba(255,255,255,0) 100%);
+   background-image:radial-gradient(rgba(255,255,255,.7), rgba(255,255,255,0) 100%);
 }
