--- a/css/views.css
+++ b/css/views.css
@@ -124,7 +124,7 @@
 	background: rgba(76,180,73, 0.8);
 }
 
-.ch-item div>h1 {
+.ch-item div>h1, .ch-itemup div>h1 {
 	color: #fff;
 	letter-spacing: 2px;
 	font-size: 20px;
@@ -143,7 +143,7 @@
 	transition: all 1s ease-in-out 0.4s;
 }
 
-.ch-item div>h1>a {
+.ch-item div>h1>a, .ch-itemup div>h1>a {
 	color: #fff;
 	font-size: 20px;
 	text-align:center;
@@ -167,7 +167,7 @@
 	transition: all 1s ease-in-out 0.4s;
 }
 
-.ch-item div>p>a {
+.ch-item div>p>a, .ch-itemdown div>p>a {
    color: #fff;
 	padding: 5px 5px;
 	position: relative;
@@ -176,6 +176,102 @@
 	font-size: 40px;
 	text-align:center;
 	opacity: 1;
+}
+
+.ch-itemup {
+	width: 180px;
+	height: 90px;
+	margin: auto;
+	border-radius: 90px 90px 0% 0%;
+	position: relative;
+	cursor: default;
+	box-shadow:
+      inset 0 0 0 16px rgba(255,255,255,0.6),
+		0 1px 2px rgba(0,0,0,0.1);
+		
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+	display: block;
+}
+
+.ch-itemup div {
+	position: absolute;
+	width: inherit;
+	height: inherit;
+	border-radius: 90px 90px 0% 0%;
+	opacity: 1;
+	
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+	
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-o-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+}
+
+.ch-itemdown {
+	width: 180px;
+	height: 90px;
+	margin: auto;
+	border-radius: 0% 0% 90px 90px;
+	position: relative;
+	cursor: default;
+	box-shadow:
+      inset 0 0 0 16px rgba(255,255,255,0.6),
+		0 1px 2px rgba(0,0,0,0.1);
+		
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+	display: block;
+}
+
+.ch-itemdown div {
+	position: absolute;
+	width: inherit;
+	height: inherit;
+	border-radius: 0% 0% 90px 90px;
+	opacity: 1;
+	
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+	
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-o-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+}
+
+.ch-itemdown div>p {
+	color: #fff;
+	padding: 5px 5px;
+	position: relative;
+	top: 0px;
+	font-style: bold;
+	margin: 0 15px;
+	font-size: 50px;
+	border-top: 1px solid rgba(255,255,255,0.5);
+	text-align:center;
+	opacity: 1;
+	-webkit-transition: all 1s ease-in-out 0.4s;
+	-moz-transition: all 1s ease-in-out 0.4s;
+	-o-transition: all 1s ease-in-out 0.4s;
+	-ms-transition: all 1s ease-in-out 0.4s;
+	transition: all 1s ease-in-out 0.4s;
 }
 
 
