Refactor plugin profiles right ...
Gestion des droits pour la configuration du plugin :
Un droit global config (aucun/lecture/écriture) permet de
(rien/lire/modifier) tout ce qui concerne les éléments de base (checks,
graph templates, ...). Un droit plus spécifique pour les 4 grandes
fonctions (aucun/lecture/écriture) qui permet de (rien/lire/modifier)
les catalogues de composants, les catalogues de services, la weathermap
et les vues ...

A noter : j'ai supprimé les droits check, command, ... pour les
regrouper dans le droit global config.

Si on n'a pas de droit global configuration, on ne voit que la partie
dashboard. Le droit configuration lecture permet de tout consulter mais
de rien modifier pour la configuration de base. Le droit configuration
écriture permet de modifier la configuration de base. Pour chaque partie
spécifique (cc, cs, wm, vues), elle a son propre droit :
rien/lire/modifier. La première partie de l'onglet profil permet de
gérer tous ces droits.

Gestion des droits pour l'affichage dans le dashboard :
Un droit global dashboard (aucun/lecture) permet de (rien/afficher) le
dashboard. Un droit plus spécifique pour les 6 grandes fonctions permet
de (rien/afficher) l'état du système, l'état des hôtes, les catalogues
de composants, les catalogues de services, les ressource et les vues.

Si on n'a pas de droit global dashboard, on ne voit pas le dashboard.

Gestion des droits pour l'affichage sur la home page :
Un droit global homepage (aucun/lecture) permet de (rien/afficher) les
onglets dans la home page. Un droit plus spécifique pour les 5 grandes
fonctions permet de (rien/afficher) un onglet pour l'état d usystème,
l'état des hôtes, les catalogues de composants, les catalogues de
services et les vues.

Gestion des droits autres :
Un droit restart_shinken (aucun/lecture) permet de (rien/afficher) le
bouton de forçage du redémarrage de Shinken. Pour cela il faut, bien
sûr, que le dashboard soit visible.
Un droit host_command (aucun/lecture) permet d

--- a/css/views.css
+++ b/css/views.css
@@ -154,9 +154,10 @@
 	padding: 5px 5px;
 	position: relative;
 	top: -45px;
-	font-style: bold;
+	font-weight: bold;
+	font-style: italic;
 	margin: 0 15px;
-	font-size: 50px;
+	font-size: 40px;
 	border-top: 1px solid rgba(255,255,255,0.5);
 	text-align:center;
 	opacity: 1;
@@ -171,7 +172,6 @@
    color: #fff;
 	padding: 5px 5px;
 	position: relative;
-	font-style: italic;
 	margin: 0 15px;
 	font-size: 40px;
 	text-align:center;
