CSS fix for vertical text in IE 11

--- a/css/views.css
+++ b/css/views.css
@@ -312,6 +312,7 @@ td .vertical {
 	padding-right: 2px;
 }
 
+/*
 .vertical-text {
 	width: 18px;
 	margin: 0;
@@ -325,7 +326,50 @@ td .vertical {
 	-o-transform: rotate(-90.0deg);
 	transform: rotate(-90.0deg);
 }
-
+*/
+/** 
+* Works everywere ( IE7+, FF, Chrome, Safari, Opera )
+* Example: http://jsbin.com/afAQAWA/2/
+*/
+.rotated-text {
+    display: inline-block;
+    overflow: hidden;
+	font-weight: normal;
+	padding-left: 2px;
+	padding-right: 2px;
+	width: 18px;
+	margin: 0;
+	margin-bottom: 4px;
+}
+.rotated-text__inner {
+    display: inline-block;
+    white-space: nowrap;
+    /* this is for shity "non IE" browsers
+       that doesn't support writing-mode */
+    -webkit-transform: translate(1.1em,0) rotate(90deg);
+       -moz-transform: translate(1.1em,0) rotate(90deg);
+         -o-transform: translate(1.1em,0) rotate(90deg);
+            transform: translate(1.1em,0) rotate(90deg);
+    -webkit-transform-origin: 0 0;
+       -moz-transform-origin: 0 0;
+         -o-transform-origin: 0 0;
+            transform-origin: 0 0;
+   /* IE9+ */
+   -ms-transform: none;
+   -ms-transform-origin: none;
+   /* IE8+ */
+   -ms-writing-mode: tb-rl;
+   /* IE7 and below */
+   *writing-mode: tb-rl;
+}
+.rotated-text__inner:before {
+    content: "";
+    float: left;
+    margin-top: 100%;
+}
+/*
+<div class="rotated-text"><span class="rotated-text__inner">Easy</span></div>
+*/
 
 
 .serviceOK {
