Resource view,, differences SOFT and HARD states
HARD state services are displayed with black bold text.
SOFT state services are displayed with grey normal text.

--- a/css/views.css
+++ b/css/views.css
@@ -471,6 +471,15 @@ td .vertical {
 	border-bottom: 15px solid rgb(18,158,255);
 }
 
+.resourceHARD {
+	font-weight: bold;
+	color: black;
+}
+.resourceSOFT {
+	font-weight: normal;
+	color: darkgrey;
+}
+
 
 span.tagBox-container {
   display: inline-block;
