--- a/css/views.css
+++ b/css/views.css
@@ -296,15 +296,11 @@ table .minemap {
    top: -30px;
 }
 
-table .minemap td {
-	width: 10px;
-	
-	display: table-cell;
-	padding: 3px;
-	border: 1px #ccc outset;
+tr.services {
+	height: 40px;
 }
 
-td .vertical {
+th.vertical {
 	height: 100px;
 	width: 18px;
 	vertical-align: bottom;
@@ -317,36 +313,14 @@ td .vertical {
 	padding-right: 2px;
 }
 
-td .vertical-service {
-	height: auto;
-	width: 18px;
-	vertical-align: center;
-	text-align: center;
-	overflow: visible!important;
-	white-space: nowrap;
-	border-top: 0;
-	font-weight: normal;
+tr.services td.serviceState {
+	width: 20px;
 	padding-left: 2px;
 	padding-right: 2px;
 }
 
-/*
-.vertical-text {
-	width: 18px;
-	margin: 0;
-	margin-bottom: 4px;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=-0.00000000,M12=1.00000000,M21=-1.00000000,M22=-0.00000000,sizingMethod='auto expand')";
-	filter: flipv() fliph();
-	writing-mode: tb-rl;
-	-webkit-transform: rotate(-90.0deg);
-	-moz-transform: rotate(-90.0deg);
-	-ms-transform: rotate(-90.0deg);
-	-o-transform: rotate(-90.0deg);
-	transform: rotate(-90.0deg);
-}
-*/
 /** 
-* Works everywere ( IE7+, FF, Chrome, Safari, Opera )
+* Works everywhere ( IE7+, FF, Chrome, Safari, Opera )
 * Example: http://jsbin.com/afAQAWA/2/
 */
 .rotated-text {
@@ -355,7 +329,7 @@ td .vertical-service {
 	font-weight: normal;
 	padding-left: 2px;
 	padding-right: 2px;
-	width: 18px;
+	width: 16px;
 	margin: 0;
 	margin-bottom: 4px;
 }
@@ -385,14 +359,11 @@ td .vertical-service {
     float: left;
     margin-top: 100%;
 }
-/*
-<div class="rotated-text"><span class="rotated-text__inner">Easy</span></div>
-*/
 
 
 .service {
-	width: 20px;
-	height: 20px;
+	width: 16px;
+	height: 16px;
 	margin: auto;
 	border-radius: 50%;
 }
@@ -445,12 +416,6 @@ td .vertical-service {
 
 .foldtl {
   position: relative;
-
-/*
-  -webkit-box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
-  -moz-box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
-  box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
-*/
 }
  
 .foldtl:before {
