Fix display graph in tooltip in resources list

--- a/css/views.css
+++ b/css/views.css
@@ -624,3 +624,7 @@ line.linkblack {
   .tipsy-w .tipsy-arrow { left: 0; top: 50%; margin-top: -5px; border-right-style: solid; border-left: none; border-top-color: transparent; border-bottom-color: transparent; }
 
   
+
+.qtip-monitoring{
+   max-width: 650px;
+}
