--- a/css/webui/bootstrap.css
+++ b/css/webui/bootstrap.css
@@ -1072,7 +1072,11 @@ th {
 .glyphicon-menu-up:before {
   content: "\e260";
 }
-
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
